--- a/public/style.css
+++ b/public/style.css
@@ -991,12 +991,16 @@ video {
   right: 5px;
 }
 
-.top-0{
-  top: 0px;
-}
-
 .top-1\/2{
   top: 50%;
+}
+
+.top-14{
+  top: 3.5rem;
+}
+
+.top-\[-20px\]{
+  top: -20px;
 }
 
 .top-\[61px\]{
@@ -1087,10 +1091,6 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -1117,6 +1117,10 @@ video {
 
 .mr-2{
   margin-right: 0.5rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
 }
 
 .mt-1{
@@ -1183,6 +1187,10 @@ video {
   display: none;
 }
 
+.h-1\/2{
+  height: 50%;
+}
+
 .h-10{
   height: 2.5rem;
 }
@@ -1203,10 +1211,6 @@ video {
   height: 0.625rem;
 }
 
-.h-28{
-  height: 7rem;
-}
-
 .h-32{
   height: 8rem;
 }
@@ -1217,6 +1221,10 @@ video {
 
 .h-5{
   height: 1.25rem;
+}
+
+.h-52{
+  height: 13rem;
 }
 
 .h-6{
@@ -1291,20 +1299,12 @@ video {
   height: 100vh;
 }
 
-.max-h-\[70px\]{
-  max-height: 70px;
-}
-
 .min-h-1{
   min-height: 0.25rem;
 }
 
 .w-1\/2{
   width: 50%;
-}
-
-.w-1\/4{
-  width: 25%;
 }
 
 .w-10{
@@ -1387,14 +1387,6 @@ video {
   width: 365px;
 }
 
-.w-\[42px\]{
-  width: 42px;
-}
-
-.w-\[432px\]{
-  width: 432px;
-}
-
 .w-\[80\%\]{
   width: 80%;
 }
@@ -1425,10 +1417,6 @@ video {
 
 .flex-none{
   flex: none;
-}
-
-.flex-grow{
-  flex-grow: 1;
 }
 
 .grow{
@@ -1481,10 +1469,6 @@ video {
   cursor: auto;
 }
 
-.cursor-default{
-  cursor: default;
-}
-
 .cursor-pointer{
   cursor: pointer;
 }
@@ -1521,10 +1505,6 @@ video {
   align-items: flex-start;
 }
 
-.items-end{
-  align-items: flex-end;
-}
-
 .items-center{
   align-items: center;
 }
@@ -1539,10 +1519,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.justify-items-end{
-  justify-items: end;
 }
 
 .gap-1{
@@ -1598,10 +1574,6 @@ video {
 
 .rounded-2xl{
   border-radius: 1rem;
-}
-
-.rounded-\[4px\]{
-  border-radius: 4px;
 }
 
 .rounded-\[inherit\]{
@@ -1696,25 +1668,12 @@ video {
   border-color: transparent;
 }
 
-.border-opacity-10{
-  --tw-border-opacity: 0.1;
-}
-
-.border-opacity-100{
-  --tw-border-opacity: 1;
-}
-
 .border-opacity-20{
   --tw-border-opacity: 0.2;
 }
 
-.border-opacity-30{
-  --tw-border-opacity: 0.3;
-}
-
-.bg-\[\#19191e\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 25 30 / var(--tw-bg-opacity));
+.border-opacity-5{
+  --tw-border-opacity: 0.05;
 }
 
 .bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
@@ -1738,11 +1697,6 @@ video {
 .bg-d-bgc{
   --tw-bg-opacity: 1;
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
-}
-
-.bg-d-danger{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 66 66 / var(--tw-bg-opacity));
 }
 
 .bg-d-primary{
@@ -1817,14 +1771,6 @@ video {
 
 .p-4{
   padding: 1rem;
-}
-
-.p-\[2px\]{
-  padding: 2px;
-}
-
-.p-\[3px\]{
-  padding: 3px;
 }
 
 .px-1{
@@ -2067,11 +2013,6 @@ video {
   color: rgb(42 134 254 / var(--tw-text-opacity));
 }
 
-.text-d-danger{
-  --tw-text-opacity: 1;
-  color: rgb(255 66 66 / var(--tw-text-opacity));
-}
-
 .text-d-text{
   --tw-text-opacity: 1;
   color: rgb(214 215 216 / var(--tw-text-opacity));
@@ -2100,11 +2041,6 @@ video {
 .text-l-danger{
   --tw-text-opacity: 1;
   color: rgb(184 38 38 / var(--tw-text-opacity));
-}
-
-.text-l-secondary{
-  --tw-text-opacity: 1;
-  color: rgb(235 235 235 / var(--tw-text-opacity));
 }
 
 .text-l-text{
@@ -2170,18 +2106,6 @@ video {
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2285,10 +2209,6 @@ video {
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
 
-.text-shadow {
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-}
-
 .backdrop\:cursor-pointer::backdrop{
   cursor: pointer;
 }
@@ -2307,21 +2227,6 @@ video {
 .hover\:rotate-90:hover{
   --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:bg-\[\#1070ed\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 112 237 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#177CFF\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 124 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#d32a2a\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(211 42 42 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-700:hover{
@@ -2356,6 +2261,16 @@ video {
 
 .hover\:opacity-100:hover{
   opacity: 1;
+}
+
+.hover\:dynamic-primary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 248 253 / var(--tw-bg-opacity));
+}
+
+.hover\:dynamic-primary:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 31 36 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -2433,10 +2348,6 @@ video {
   --tw-border-opacity: 0.2;
 }
 
-.dark\:border-opacity-5:is(.dark *){
-  --tw-border-opacity: 0.05;
-}
-
 .dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]:is(.dark *){
   background-color: rgba(214,215,216,0.2);
 }
@@ -2481,19 +2392,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark\:shadow-none:is(.dark *){
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .dark\:ring-offset-slate-900:is(.dark *){
   --tw-ring-offset-color: #0f172a;
-}
-
-.dark\:hover\:bg-\[\#1070ed\]:hover:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 112 237 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:bg-d-secondary:hover:is(.dark *){
@@ -2516,6 +2416,10 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:top-24{
+    top: 6rem;
+  }
+
   .sm\:mb-28{
     margin-bottom: 7rem;
   }
@@ -2526,6 +2430,14 @@ video {
 
   .sm\:h-10{
     height: 2.5rem;
+  }
+
+  .sm\:h-36{
+    height: 9rem;
+  }
+
+  .sm\:h-64{
+    height: 16rem;
   }
 
   .sm\:h-\[calc\(100vh-73px\)\]{
@@ -2697,10 +2609,6 @@ video {
     gap: 0px;
   }
 
-  .md\:gap-5{
-    gap: 1.25rem;
-  }
-
   .md\:rounded-xl{
     border-radius: 0.75rem;
   }
@@ -2716,11 +2624,6 @@ video {
   .md\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
-  }
-
-  .md\:px-6{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
   }
 
   .md\:pb-2{
@@ -2868,10 +2771,6 @@ video {
     width: 365px;
   }
 
-  .lg\:w-\[50px\]{
-    width: 50px;
-  }
-
   .lg\:w-full{
     width: 100%;
   }
@@ -2890,10 +2789,6 @@ video {
 
   .lg\:rounded-2xl{
     border-radius: 1rem;
-  }
-
-  .lg\:rounded-lg{
-    border-radius: 0.5rem;
   }
 
   .lg\:rounded-xl{
@@ -2956,8 +2851,8 @@ video {
 }
 
 @media (min-width: 1280px){
-  .xl\:bottom-\[-105px\]{
-    bottom: -105px;
+  .xl\:bottom-\[-85px\]{
+    bottom: -85px;
   }
 
   .xl\:order-1{
@@ -3024,10 +2919,6 @@ video {
     margin-top: 0.25rem;
   }
 
-  .xl\:mt-5{
-    margin-top: 1.25rem;
-  }
-
   .xl\:mt-\[73px\]{
     margin-top: 73px;
   }
@@ -3066,10 +2957,6 @@ video {
 
   .xl\:w-14{
     width: 3.5rem;
-  }
-
-  .xl\:w-24{
-    width: 6rem;
   }
 
   .xl\:w-40{
