--- a/public/style.css
+++ b/public/style.css
@@ -1015,6 +1015,14 @@ video {
   top: 61px;
 }
 
+.-right-\[400px\]{
+  right: -400px;
+}
+
+.-right-\[350px\]{
+  right: -350px;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -1119,10 +1127,6 @@ video {
   margin-left: 1.5rem;
 }
 
-.ml-auto{
-  margin-left: auto;
-}
-
 .mr-1{
   margin-right: 0.25rem;
 }
@@ -1163,12 +1167,12 @@ video {
   margin-top: 61px;
 }
 
-.mt-auto{
-  margin-top: auto;
-}
-
 .mt-\[65px\]{
   margin-top: 65px;
+}
+
+.mt-auto{
+  margin-top: auto;
 }
 
 .box-border{
@@ -1239,8 +1243,8 @@ video {
   height: 1.5rem;
 }
 
-.h-64{
-  height: 16rem;
+.h-60{
+  height: 15rem;
 }
 
 .h-7{
@@ -1249,6 +1253,10 @@ video {
 
 .h-8{
   height: 2rem;
+}
+
+.h-9{
+  height: 2.25rem;
 }
 
 .h-\[128px\]{
@@ -1307,20 +1315,20 @@ video {
   height: 100vh;
 }
 
-.h-60{
-  height: 15rem;
+.h-20{
+  height: 5rem;
 }
 
-.h-9{
-  height: 2.25rem;
-}
-
-.max-h-\[70px\]{
-  max-height: 70px;
+.h-80{
+  height: 20rem;
 }
 
 .max-h-10{
   max-height: 2.5rem;
+}
+
+.max-h-\[70px\]{
+  max-height: 70px;
 }
 
 .min-h-1{
@@ -1395,6 +1403,10 @@ video {
   width: 2rem;
 }
 
+.w-80{
+  width: 20rem;
+}
+
 .w-\[128px\]{
   width: 128px;
 }
@@ -1419,10 +1431,6 @@ video {
   width: 42px;
 }
 
-.w-\[432px\]{
-  width: 432px;
-}
-
 .w-\[80\%\]{
   width: 80%;
 }
@@ -1439,12 +1447,8 @@ video {
   width: 100vw;
 }
 
-.w-80{
-  width: 20rem;
-}
-
-.w-3{
-  width: 0.75rem;
+.w-\[90\%\]{
+  width: 90%;
 }
 
 .max-w-7xl{
@@ -1733,6 +1737,11 @@ video {
   border-color: rgb(238 241 243 / var(--tw-border-opacity));
 }
 
+.border-l-secondary{
+  --tw-border-opacity: 1;
+  border-color: rgb(235 235 235 / var(--tw-border-opacity));
+}
+
 .border-l-text{
   --tw-border-opacity: 1;
   border-color: rgb(10 10 18 / var(--tw-border-opacity));
@@ -1742,9 +1751,9 @@ video {
   border-color: transparent;
 }
 
-.border-l-secondary{
+.border-red-700{
   --tw-border-opacity: 1;
-  border-color: rgb(235 235 235 / var(--tw-border-opacity));
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
 }
 
 .border-opacity-10{
@@ -1761,11 +1770,6 @@ video {
 
 .border-opacity-30{
   --tw-border-opacity: 0.3;
-}
-
-.bg-\[\#19191e\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 25 30 / var(--tw-bg-opacity));
 }
 
 .bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
@@ -1963,6 +1967,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pb-20{
+  padding-bottom: 5rem;
+}
+
 .pb-6{
   padding-bottom: 1.5rem;
 }
@@ -2003,8 +2011,12 @@ video {
   padding-top: 1.25rem;
 }
 
-.pb-20{
-  padding-bottom: 5rem;
+.pb-14{
+  padding-bottom: 3.5rem;
+}
+
+.pb-\[60px\]{
+  padding-bottom: 60px;
 }
 
 .text-left{
@@ -2025,10 +2037,6 @@ video {
 
 .align-middle{
   vertical-align: middle;
-}
-
-.align-bottom{
-  vertical-align: bottom;
 }
 
 .font-open-sans{
@@ -2140,6 +2148,11 @@ video {
   color: rgb(214 215 216 / var(--tw-text-opacity));
 }
 
+.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2178,11 +2191,6 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -2382,14 +2390,14 @@ video {
   background-color: rgb(16 112 237 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#177CFF\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 124 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#d32a2a\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(211 42 42 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#dbdbe4\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 219 228 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-700:hover{
@@ -2415,11 +2423,6 @@ video {
 .hover\:bg-red-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#dbdbe4\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 219 228 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-700:hover{
@@ -2484,6 +2487,16 @@ video {
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
+.group:hover .group-hover\:bg-\[\#1070ed\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 112 237 / var(--tw-bg-opacity));
+}
+
+.group:hover .group-hover\:bg-\[\#d32a2a\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(211 42 42 / var(--tw-bg-opacity));
+}
+
 .group:hover .group-hover\:opacity-80{
   opacity: 0.8;
 }
@@ -2497,14 +2510,14 @@ video {
   border-color: rgb(23 24 28 / var(--tw-border-opacity));
 }
 
-.dark\:border-d-text:is(.dark *){
-  --tw-border-opacity: 1;
-  border-color: rgb(214 215 216 / var(--tw-border-opacity));
-}
-
 .dark\:border-d-primary:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(30 31 36 / var(--tw-border-opacity));
+}
+
+.dark\:border-d-text:is(.dark *){
+  --tw-border-opacity: 1;
+  border-color: rgb(214 215 216 / var(--tw-border-opacity));
 }
 
 .dark\:border-opacity-20:is(.dark *){
@@ -2554,14 +2567,14 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.dark\:text-white:is(.dark *){
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .dark\:text-gray-600:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.dark\:text-white:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .dark\:shadow-none:is(.dark *){
@@ -2579,6 +2592,11 @@ video {
   background-color: rgb(16 112 237 / var(--tw-bg-opacity));
 }
 
+.dark\:hover\:bg-\[\#131316\]:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 19 22 / var(--tw-bg-opacity));
+}
+
 .dark\:hover\:bg-d-secondary:hover:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
@@ -2594,11 +2612,6 @@ video {
   background-color: rgb(69 10 10 / var(--tw-bg-opacity));
 }
 
-.dark\:hover\:bg-\[\#131316\]:hover:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 19 22 / var(--tw-bg-opacity));
-}
-
 .dark\:focus\:ring-offset-gray-800:focus:is(.dark *){
   --tw-ring-offset-color: #1f2937;
 }
@@ -2612,20 +2625,8 @@ video {
     margin-top: 0.75rem;
   }
 
-  .sm\:h-10{
-    height: 2.5rem;
-  }
-
   .sm\:h-\[calc\(100vh-73px\)\]{
     height: calc(100vh - 73px);
-  }
-
-  .sm\:w-12{
-    width: 3rem;
-  }
-
-  .sm\:w-5\/6{
-    width: 83.333333%;
   }
 
   .sm\:w-auto{
@@ -2640,22 +2641,9 @@ video {
     gap: 0.75rem;
   }
 
-  .sm\:rounded-xl{
-    border-radius: 0.75rem;
-  }
-
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-
-  .sm\:py-3{
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
-
-  .sm\:pt-3{
-    padding-top: 0.75rem;
   }
 
   .sm\:text-3xl{
@@ -2671,11 +2659,6 @@ video {
   .sm\:text-9xl{
     font-size: 8rem;
     line-height: 1;
-  }
-
-  .sm\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 }
 
@@ -2704,10 +2687,6 @@ video {
 
   .md\:mb-4{
     margin-bottom: 1rem;
-  }
-
-  .md\:ml-3{
-    margin-left: 0.75rem;
   }
 
   .md\:mt-9{
@@ -2746,8 +2725,16 @@ video {
     height: calc(100vh - 73px);
   }
 
-  .md\:w-12{
-    width: 3rem;
+  .md\:h-\[199px\]{
+    height: 199px;
+  }
+
+  .md\:h-\[154px\]{
+    height: 154px;
+  }
+
+  .md\:h-36{
+    height: 9rem;
   }
 
   .md\:w-16{
@@ -2790,10 +2777,6 @@ video {
     justify-content: center;
   }
 
-  .md\:gap-0{
-    gap: 0px;
-  }
-
   .md\:rounded-xl{
     border-radius: 0.75rem;
   }
@@ -2806,9 +2789,8 @@ video {
     padding: 1.75rem;
   }
 
-  .md\:px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .md\:p-2{
+    padding: 0.5rem;
   }
 
   .md\:px-3{
@@ -2893,8 +2875,8 @@ video {
     margin-bottom: 0.5rem;
   }
 
-  .lg\:mb-24{
-    margin-bottom: 6rem;
+  .lg\:mb-20{
+    margin-bottom: 5rem;
   }
 
   .lg\:mt-2{
@@ -2903,10 +2885,6 @@ video {
 
   .lg\:mt-4{
     margin-top: 1rem;
-  }
-
-  .lg\:mb-20{
-    margin-bottom: 5rem;
   }
 
   .lg\:hidden{
@@ -2965,16 +2943,12 @@ video {
     width: 365px;
   }
 
-  .lg\:w-\[50px\]{
-    width: 50px;
-  }
-
-  .lg\:w-full{
-    width: 100%;
-  }
-
   .lg\:w-\[432px\]{
     width: 432px;
+  }
+
+  .lg\:w-\[50px\]{
+    width: 50px;
   }
 
   .lg\:flex-row{
@@ -3001,8 +2975,20 @@ video {
     border-radius: 0.75rem;
   }
 
+  .lg\:rounded-md{
+    border-radius: 0.375rem;
+  }
+
   .lg\:p-2{
     padding: 0.5rem;
+  }
+
+  .lg\:p-\[6px\]{
+    padding: 6px;
+  }
+
+  .lg\:p-4{
+    padding: 1rem;
   }
 
   .lg\:px-4{
@@ -3213,20 +3199,20 @@ video {
     border-radius: 0.5rem;
   }
 
-  .xl\:p-2{
-    padding: 0.5rem;
+  .xl\:p-1{
+    padding: 0.25rem;
   }
 
-  .xl\:p-8{
-    padding: 2rem;
+  .xl\:p-2{
+    padding: 0.5rem;
   }
 
   .xl\:p-3{
     padding: 0.75rem;
   }
 
-  .xl\:p-1{
-    padding: 0.25rem;
+  .xl\:p-8{
+    padding: 2rem;
   }
 
   .xl\:px-12{
