--- a/public/style.css
+++ b/public/style.css
@@ -979,10 +979,6 @@ video {
   right: -300px;
 }
 
-.-right-\[350px\]{
-  right: -350px;
-}
-
 .bottom-\[-88px\]{
   bottom: -88px;
 }
@@ -1015,12 +1011,16 @@ video {
   top: 50%;
 }
 
-.top-14{
-  top: 3.5rem;
-}
-
 .top-\[61px\]{
   top: 61px;
+}
+
+.-right-\[400px\]{
+  right: -400px;
+}
+
+.-right-\[350px\]{
+  right: -350px;
 }
 
 .-z-10{
@@ -1127,20 +1127,12 @@ video {
   margin-left: 1.5rem;
 }
 
-.ml-auto{
-  margin-left: auto;
-}
-
 .mr-1{
   margin-right: 0.25rem;
 }
 
 .mr-2{
   margin-right: 0.5rem;
-}
-
-.mr-4{
-  margin-right: 1rem;
 }
 
 .mt-1{
@@ -1211,10 +1203,6 @@ video {
   display: none;
 }
 
-.h-1\/2{
-  height: 50%;
-}
-
 .h-10{
   height: 2.5rem;
 }
@@ -1251,10 +1239,6 @@ video {
   height: 1.25rem;
 }
 
-.h-52{
-  height: 13rem;
-}
-
 .h-6{
   height: 1.5rem;
 }
@@ -1263,20 +1247,12 @@ video {
   height: 15rem;
 }
 
-.h-64{
-  height: 16rem;
-}
-
 .h-7{
   height: 1.75rem;
 }
 
 .h-8{
   height: 2rem;
-}
-
-.h-80{
-  height: 20rem;
 }
 
 .h-9{
@@ -1337,6 +1313,14 @@ video {
 
 .h-screen{
   height: 100vh;
+}
+
+.h-20{
+  height: 5rem;
+}
+
+.h-80{
+  height: 20rem;
 }
 
 .max-h-10{
@@ -1451,10 +1435,6 @@ video {
   width: 80%;
 }
 
-.w-\[90\%\]{
-  width: 90%;
-}
-
 .w-\[calc\(100\%-90px\)\]{
   width: calc(100% - 90px);
 }
@@ -1465,6 +1445,10 @@ video {
 
 .w-screen{
   width: 100vw;
+}
+
+.w-\[90\%\]{
+  width: 90%;
 }
 
 .max-w-7xl{
@@ -1591,10 +1575,6 @@ video {
   align-items: flex-start;
 }
 
-.items-end{
-  align-items: flex-end;
-}
-
 .items-center{
   align-items: center;
 }
@@ -1609,10 +1589,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.justify-items-end{
-  justify-items: end;
 }
 
 .gap-1{
@@ -1775,8 +1751,17 @@ video {
   border-color: transparent;
 }
 
+.border-red-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
+}
+
 .border-opacity-10{
   --tw-border-opacity: 0.1;
+}
+
+.border-opacity-100{
+  --tw-border-opacity: 1;
 }
 
 .border-opacity-20{
@@ -1785,10 +1770,6 @@ video {
 
 .border-opacity-30{
   --tw-border-opacity: 0.3;
-}
-
-.border-opacity-5{
-  --tw-border-opacity: 0.05;
 }
 
 .bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
@@ -1998,10 +1979,6 @@ video {
   padding-bottom: 54px;
 }
 
-.pb-\[60px\]{
-  padding-bottom: 60px;
-}
-
 .pl-1{
   padding-left: 0.25rem;
 }
@@ -2032,6 +2009,14 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pb-14{
+  padding-bottom: 3.5rem;
+}
+
+.pb-\[60px\]{
+  padding-bottom: 60px;
 }
 
 .text-left{
@@ -2264,6 +2249,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2364,6 +2361,10 @@ video {
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
 
+.text-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+}
+
 .backdrop\:cursor-pointer::backdrop{
   cursor: pointer;
 }
@@ -2433,16 +2434,6 @@ video {
   opacity: 1;
 }
 
-.hover\:dynamic-primary:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 248 253 / var(--tw-bg-opacity));
-}
-
-.hover\:dynamic-primary:hover:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 31 36 / var(--tw-bg-opacity));
-}
-
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2487,6 +2478,15 @@ video {
   bottom: -125px;
 }
 
+.group:hover .group-hover\:bg-d-accent\/100{
+  background-color: rgb(42 134 254 / 1);
+}
+
+.group:hover .group-hover\:bg-red-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
 .group:hover .group-hover\:bg-\[\#1070ed\]{
   --tw-bg-opacity: 1;
   background-color: rgb(16 112 237 / var(--tw-bg-opacity));
@@ -2495,15 +2495,6 @@ video {
 .group:hover .group-hover\:bg-\[\#d32a2a\]{
   --tw-bg-opacity: 1;
   background-color: rgb(211 42 42 / var(--tw-bg-opacity));
-}
-
-.group:hover .group-hover\:bg-d-accent\/100{
-  background-color: rgb(42 134 254 / 1);
-}
-
-.group:hover .group-hover\:bg-red-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .group:hover .group-hover\:opacity-80{
@@ -2531,6 +2522,10 @@ video {
 
 .dark\:border-opacity-20:is(.dark *){
   --tw-border-opacity: 0.2;
+}
+
+.dark\:border-opacity-5:is(.dark *){
+  --tw-border-opacity: 0.05;
 }
 
 .dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]:is(.dark *){
@@ -2622,24 +2617,12 @@ video {
 }
 
 @media (min-width: 640px){
-  .sm\:top-24{
-    top: 6rem;
-  }
-
   .sm\:mb-28{
     margin-bottom: 7rem;
   }
 
   .sm\:mt-3{
     margin-top: 0.75rem;
-  }
-
-  .sm\:h-36{
-    height: 9rem;
-  }
-
-  .sm\:h-64{
-    height: 16rem;
   }
 
   .sm\:h-\[calc\(100vh-73px\)\]{
@@ -2742,6 +2725,18 @@ video {
     height: calc(100vh - 73px);
   }
 
+  .md\:h-\[199px\]{
+    height: 199px;
+  }
+
+  .md\:h-\[154px\]{
+    height: 154px;
+  }
+
+  .md\:h-36{
+    height: 9rem;
+  }
+
   .md\:w-16{
     width: 4rem;
   }
@@ -2782,16 +2777,8 @@ video {
     justify-content: center;
   }
 
-  .md\:gap-5{
-    gap: 1.25rem;
-  }
-
   .md\:rounded-xl{
     border-radius: 0.75rem;
-  }
-
-  .md\:p-2{
-    padding: 0.5rem;
   }
 
   .md\:p-3{
@@ -2802,14 +2789,13 @@ video {
     padding: 1.75rem;
   }
 
+  .md\:p-2{
+    padding: 0.5rem;
+  }
+
   .md\:px-3{
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-  }
-
-  .md\:px-6{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
   }
 
   .md\:pb-2{
@@ -2989,16 +2975,20 @@ video {
     border-radius: 0.75rem;
   }
 
+  .lg\:rounded-md{
+    border-radius: 0.375rem;
+  }
+
   .lg\:p-2{
     padding: 0.5rem;
   }
 
-  .lg\:p-4{
-    padding: 1rem;
-  }
-
   .lg\:p-\[6px\]{
     padding: 6px;
+  }
+
+  .lg\:p-4{
+    padding: 1rem;
   }
 
   .lg\:px-4{
@@ -3053,8 +3043,8 @@ video {
 }
 
 @media (min-width: 1280px){
-  .xl\:bottom-\[-85px\]{
-    bottom: -85px;
+  .xl\:bottom-\[-105px\]{
+    bottom: -105px;
   }
 
   .xl\:order-1{
@@ -3119,10 +3109,6 @@ video {
 
   .xl\:mt-1{
     margin-top: 0.25rem;
-  }
-
-  .xl\:mt-5{
-    margin-top: 1.25rem;
   }
 
   .xl\:mt-\[73px\]{
