--- a/public/style.css
+++ b/public/style.css
@@ -979,6 +979,10 @@ video {
   right: -300px;
 }
 
+.-right-\[350px\]{
+  right: -350px;
+}
+
 .bottom-\[-88px\]{
   bottom: -88px;
 }
@@ -1013,14 +1017,6 @@ video {
 
 .top-\[61px\]{
   top: 61px;
-}
-
-.-right-\[400px\]{
-  right: -400px;
-}
-
-.-right-\[350px\]{
-  right: -350px;
 }
 
 .-z-10{
@@ -1255,6 +1251,10 @@ video {
   height: 2rem;
 }
 
+.h-80{
+  height: 20rem;
+}
+
 .h-9{
   height: 2.25rem;
 }
@@ -1313,14 +1313,6 @@ video {
 
 .h-screen{
   height: 100vh;
-}
-
-.h-20{
-  height: 5rem;
-}
-
-.h-80{
-  height: 20rem;
 }
 
 .max-h-10{
@@ -1435,6 +1427,10 @@ video {
   width: 80%;
 }
 
+.w-\[90\%\]{
+  width: 90%;
+}
+
 .w-\[calc\(100\%-90px\)\]{
   width: calc(100% - 90px);
 }
@@ -1445,10 +1441,6 @@ video {
 
 .w-screen{
   width: 100vw;
-}
-
-.w-\[90\%\]{
-  width: 90%;
 }
 
 .max-w-7xl{
@@ -1751,11 +1743,6 @@ video {
   border-color: transparent;
 }
 
-.border-red-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(185 28 28 / var(--tw-border-opacity));
-}
-
 .border-opacity-10{
   --tw-border-opacity: 0.1;
 }
@@ -1979,6 +1966,10 @@ video {
   padding-bottom: 54px;
 }
 
+.pb-\[60px\]{
+  padding-bottom: 60px;
+}
+
 .pl-1{
   padding-left: 0.25rem;
 }
@@ -2009,14 +2000,6 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.pb-14{
-  padding-bottom: 3.5rem;
-}
-
-.pb-\[60px\]{
-  padding-bottom: 60px;
 }
 
 .text-left{
@@ -2478,15 +2461,6 @@ video {
   bottom: -125px;
 }
 
-.group:hover .group-hover\:bg-d-accent\/100{
-  background-color: rgb(42 134 254 / 1);
-}
-
-.group:hover .group-hover\:bg-red-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
 .group:hover .group-hover\:bg-\[\#1070ed\]{
   --tw-bg-opacity: 1;
   background-color: rgb(16 112 237 / var(--tw-bg-opacity));
@@ -2495,6 +2469,15 @@ video {
 .group:hover .group-hover\:bg-\[\#d32a2a\]{
   --tw-bg-opacity: 1;
   background-color: rgb(211 42 42 / var(--tw-bg-opacity));
+}
+
+.group:hover .group-hover\:bg-d-accent\/100{
+  background-color: rgb(42 134 254 / 1);
+}
+
+.group:hover .group-hover\:bg-red-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .group:hover .group-hover\:opacity-80{
@@ -2518,6 +2501,11 @@ video {
 .dark\:border-d-text:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(214 215 216 / var(--tw-border-opacity));
+}
+
+.dark\:border-d-secondary:is(.dark *){
+  --tw-border-opacity: 1;
+  border-color: rgb(39 41 47 / var(--tw-border-opacity));
 }
 
 .dark\:border-opacity-20:is(.dark *){
@@ -2725,18 +2713,6 @@ video {
     height: calc(100vh - 73px);
   }
 
-  .md\:h-\[199px\]{
-    height: 199px;
-  }
-
-  .md\:h-\[154px\]{
-    height: 154px;
-  }
-
-  .md\:h-36{
-    height: 9rem;
-  }
-
   .md\:w-16{
     width: 4rem;
   }
@@ -2781,16 +2757,16 @@ video {
     border-radius: 0.75rem;
   }
 
+  .md\:p-2{
+    padding: 0.5rem;
+  }
+
   .md\:p-3{
     padding: 0.75rem;
   }
 
   .md\:p-7{
     padding: 1.75rem;
-  }
-
-  .md\:p-2{
-    padding: 0.5rem;
   }
 
   .md\:px-3{
@@ -2975,20 +2951,16 @@ video {
     border-radius: 0.75rem;
   }
 
-  .lg\:rounded-md{
-    border-radius: 0.375rem;
-  }
-
   .lg\:p-2{
     padding: 0.5rem;
   }
 
-  .lg\:p-\[6px\]{
-    padding: 6px;
-  }
-
   .lg\:p-4{
     padding: 1rem;
+  }
+
+  .lg\:p-\[6px\]{
+    padding: 6px;
   }
 
   .lg\:px-4{
