--- a/public/style.css
+++ b/public/style.css
@@ -1271,6 +1271,10 @@ input[type="search"]::-webkit-search-cancel-button {
   height: 2.25rem;
 }
 
+.h-96{
+  height: 24rem;
+}
+
 .h-\[128px\]{
   height: 128px;
 }
@@ -1423,12 +1427,8 @@ input[type="search"]::-webkit-search-cancel-button {
   width: 25%;
 }
 
-.w-\[28\%\]{
-  width: 28%;
-}
-
-.w-\[35\%\]{
-  width: 35%;
+.w-\[30\%\]{
+  width: 30%;
 }
 
 .w-\[365px\]{
@@ -1457,18 +1457,6 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .w-screen{
   width: 100vw;
-}
-
-.w-\[60\%\]{
-  width: 60%;
-}
-
-.w-\[70\%\]{
-  width: 70%;
-}
-
-.w-\[30\%\]{
-  width: 30%;
 }
 
 .max-w-7xl{
@@ -2657,10 +2645,6 @@ input[type="search"]::-webkit-search-cancel-button {
     width: auto;
   }
 
-  .sm\:w-full{
-    width: 100%;
-  }
-
   .sm\:flex-row{
     flex-direction: row;
   }
@@ -2972,6 +2956,10 @@ input[type="search"]::-webkit-search-cancel-button {
     height: 500px;
   }
 
+  .lg\:h-\[calc\(89vh\)\]{
+    height: calc(89vh);
+  }
+
   .lg\:w-1\/2{
     width: 50%;
   }
@@ -3006,14 +2994,6 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:w-\[50px\]{
     width: 50px;
-  }
-
-  .lg\:w-\[65\%\]{
-    width: 65%;
-  }
-
-  .lg\:w-\[70\%\]{
-    width: 70%;
   }
 
   .lg\:flex-row{
@@ -3208,6 +3188,10 @@ input[type="search"]::-webkit-search-cancel-button {
     height: 2rem;
   }
 
+  .xl\:h-\[calc\(92vh\)\]{
+    height: calc(92vh);
+  }
+
   .xl\:w-10{
     width: 2.5rem;
   }
@@ -3236,28 +3220,12 @@ input[type="search"]::-webkit-search-cancel-button {
     width: 2rem;
   }
 
-  .xl\:w-full{
-    width: 100%;
-  }
-
   .xl\:w-\[70\%\]{
     width: 70%;
   }
 
-  .xl\:w-\[76\%\]{
-    width: 76%;
-  }
-
-  .xl\:w-\[60\%\]{
-    width: 60%;
-  }
-
-  .xl\:w-\[66\%\]{
-    width: 66%;
-  }
-
-  .xl\:w-\[65\%\]{
-    width: 65%;
+  .xl\:w-full{
+    width: 100%;
   }
 
   .xl\:items-center{
